--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container"></div>
             <div class="col-md-6">
                 <div class="header-text">
-                    <h2>Sccial media</h2>
+                    <h2>Social media</h2>
                     <h1 class="h1">For Business!</h1>
                     <p class="pt-3">
                         Peromance Base Social Media Agency We Bare Lomern Media
